5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1807_2571.log
== TEST (2019-06-09 00:08:38) 
-- CODE:
s = input('S: ')
x = ''
for i in len(s):
	if (s=='a' or s=='A'):
		s = s+x
	else:
		s = s+s
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    for i in len(s):
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 00:12:22) 
-- CODE:
s = input('S: ')
x = ''
for i in s:
	if (s=='a' or s=='A'):
		x = s+x
	else:
		x = s+s
print(x)
-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 00:19:45) 
-- CODE:
s = input('S: ')
x = ''
for i in len(s):
	if (s[i]=='a' or s[i]=='A'):
		x = x+''
	else:
		x = x+s[i]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    for i in len(s):
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 00:21:20) 
-- CODE:
s = input('S: ')
x = ''
for i in s:
	if (s[i]=='a' or s[i]=='A'):
		x = x+''
	else:
		x = x+s[i]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (s[i]=='a' or s[i]=='A'):
TypeError: string indices must be integers
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 15:39:25) 
-- CODE:
s = input('S: ')
x = ''
for elemento in s:
	if (s[i]=='a' or s[i]=='A'):
		x = s[i]+''
	else:
		x = x+s[i]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (s[i]=='a' or s[i]=='A'):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 15:40:01) 
-- CODE:
s = input('S: ')
x = ''
for i in s:
	if (s[i]=='a' or s[i]=='A'):
		x = s[i]+''
	else:
		x = x+s[i]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (s[i]=='a' or s[i]=='A'):
TypeError: string indices must be integers
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 15:41:29) 
-- CODE:
s = input('S: ')
x = ''
for i in s:
	if (s(i)=='a' or s(i)=='A'):
		x = s(i)+''
	else:
		x = x+s(i)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (s(i)=='a' or s(i)=='A'):
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 15:45:07) 
-- CODE:
s = input('S: ')
x = ''
for i in len(s):
	if (s[i]=='a' or s[i]=='A'):
		x = s[i]+''
	else:
		x = x+s[i]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    for i in len(s):
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 15:56:06) 
-- CODE:
s = input('Frase: ')
x = ''
for i in range(s):
	if (s[i]=='a' or s[i]=='A'):
		x = x+''
	else:
		x = x+s[i]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    for i in range(s):
TypeError: 'str' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 15:59:26) 
-- CODE:
s = input('Frase: ')
x = ''
for a in s[i]:
	if (s[i]=='a' or s[i]=='A'):
		x = x+''
	else:
		x = x+s[i]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    for a in s[i]:
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:00:22) 
-- CODE:
s = input('Frase: ')
x = ''
for i in s[i]:
	if (s[i]=='a' or s[i]=='A'):
		x = x+''
	else:
		x = x+s[i]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    for i in s[i]:
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:07:57) 
-- CODE:
s = input('Frase: ')
x = ''
for i in si:
	if (s=='a' or s=='A'):
		x = x+''
	else:
		x = x+s
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    for i in si:
NameError: name 'si' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:08:18) 
-- CODE:
s = input('Frase: ')
x = ''
for i in s:
	if (s=='a' or s=='A'):
		x = x+''
	else:
		x = x+s
print(x)
-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFAMInstituto_de_C
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:12:24) 
-- CODE:
s = input('Frase: ')
x = ''
for i in len(s[i]):
	if (s=='a' or s=='A'):
		x = x+''
	else:
		x = x+s
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    for i in len(s[i]):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 21:18:35) 
-- CODE:
s = input('Frase: ').lower()
x = ''
for i in range(len(s)):
	if (s[i]=='a' or s[i]=='A'):
		x = x+''
	else:
		x = x+s[i]
print(x)
-- OUTPUT:
instituto_de_computco-icomp-ufm
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 21:20:25) 
-- CODE:
s = input('Frase: ')
x = ''
for i in range(len(s)):
	if (s[i]=='a' or s[i]=='A'):
		x = x+''
	else:
		x = x+s[i]
print(x)
-- EXECUTION TIME:
0.584413
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
